--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,54 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
   </head>
-  <body>
+  <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="text/javascript">
+      function get_browser() {
+        var ua = navigator.userAgent, tem, M = ua.match(/(opera|chrome|safari|firefox|msie|trident(?=\/))\/?\s*(\d+)/i) || [];
+        if (/trident/i.test(M[1])) {
+          tem = /\brv[ :]+(\d+)/g.exec(ua) || [];
+          return { name: 'IE', version: (tem[1] || '') };
+        }
+        if (M[1] === 'Chrome') {
+          tem = ua.match(/\bOPR\/(\d+)/)
+          if (tem != null) { return { name: 'Opera', version: tem[1] }; }
+        }
+        if (window.navigator.userAgent.indexOf("Edge") > -1) {
+          tem = ua.match(/\Edge\/(\d+)/)
+          if (tem != null) { return { name: 'Edge', version: tem[1] }; }      
+        }
+        M = M[2] ? [M[1], M[2]] : [navigator.appName, navigator.appVersion, '-?'];
+        if ((tem = ua.match(/version\/(\d+)/i)) != null) { M.splice(1, 1, tem[1]); }
+        return {
+          name: M[0],
+          version: +M[1]
+        };
+      }
+      var browser = get_browser()
+      var isSupported = isSupported(browser);
+  
+      function isSupported(browser) {
+        var supported = false;
+        if (browser.name === "Chrome" && browser.version >= 48) {
+          supported = true;
+        } else if ((browser.name === "MSIE" || browser.name === "IE") && browser.version > 9) {
+          supported = true;
+        } else if (browser.name === "Edge") {
+          supported = true;
+        }
+        return supported;
+      }
+  
+      if (!isSupported) {
+        // document.write(<h1>My message</h1>)
+        // alert("not supported");
+        document.getElementById("body").innerHTML = "This version of browser not Supoorted. Please use IE >=10 and Chrome >= 48 "
+      }
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
